[workspace]
members = [
    "sugarloaf",
    "teletypewriter",
    "corcovado",
    "copa",
    "rio-proc-macros",
    "rio-backend",
    "rio-window",
    "frontends/rioterm",
]
resolver = "2"

[workspace.package]
version = "0.2.13"
authors = ["Raphael Amorim <rapha850@gmail.com>"]
edition = "2021"
license = "MIT"
keywords = ["graphics", "terminal", "application"]
# Minimal stable rust version (MSRV)
rust-version = "1.86.0"
repository = "https://github.com/raphamorim/rio"
homepage = "https://raphamorim.io/rio"
documentation = "https://github.com/raphamorim/rio#readme"
readme = "README.md"

[workspace.dependencies]
# Note: https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#multiple-locations
# Sugarloaf example uses path when used locally, but uses
# version from crates.io when published.
teletypewriter = { path = "teletypewriter", version = "0.2.13" }
rio-backend = { path = "rio-backend", version = "0.2.13" }
rio-window = { path = "rio-window", version = "0.2.13", default-features = false }

# Own dependencies
copa = { path = "copa", default-features = false, version = "0.2.13" }
rio-proc-macros = { path = "rio-proc-macros", version = "0.2.13" }
corcovado = { path = "corcovado", version = "0.2.13" }
raw-window-handle = { version = "0.6.2", features = ["std"] }
parking_lot = { version = "0.12.3", features = [
    "nightly",
    "hardware-lock-elision",
] }
rustc-hash = "2.1.1"

# Sugarloaf is part of own dependencies but does not follow Rio versioning
sugarloaf = { path = "sugarloaf", version = "0.2.14" }

# unicode-width = "0.2.0"
unicode-width = { package = "unicode-width-16", version = "0.1.0" }
base64 = "0.22.1"
image_rs = { package = "image", version = "0.25.5", default-features = false, features = [
    "gif",
    "jpeg",
    "ico",
    "png",
    "pnm",
    "webp",
    "bmp",
] }
regex = "1.11.1"
bytemuck = { version = "1.22.0", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
wgpu = "25.0.0"
libc = "0.2.171"
smol_str = "0.3.2"
futures = "0.3.31"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.34"
wasm-bindgen-test = "0.3.42"
env_logger = "0.11.3"
console_log = "0.2.2"
bitflags = "2.9.0"
iovec = "0.1.4"
console_error_panic_hook = "0.1.7"
tracing = "0.1.41"
objc = { package = "objc-rs", version = "0.2.8" }
memmap2 = "0.9.5"
url = "2.5.4"

[profile.release]
lto = true
strip = true
debug = "limited"
codegen-units = 1
incremental = false

[profile.dev]
split-debuginfo = "unpacked"
lto = false
incremental = true
opt-level = 0
