[workspace]
members = [
    "sugarloaf",
    "teletypewriter",
    "corcovado",
    "copa",
    "rio-proc-macros",
    "rio-backend",
    "rio-window",
    "frontends/rioterm",
]
resolver = "2"

[workspace.package]
version = "0.2.31"
authors = ["Raphael Amorim <rapha850@gmail.com>"]
edition = "2021"
license = "MIT"
keywords = ["graphics", "terminal", "application"]
# Minimal stable rust version (MSRV)
rust-version = "1.90.0"
repository = "https://github.com/raphamorim/rio"
homepage = "https://rioterm.com"
documentation = "https://github.com/raphamorim/rio#readme"
readme = "README.md"

[workspace.dependencies]
# Note: https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#multiple-locations
# Sugarloaf example uses path when used locally, but uses
# version from crates.io when published.
teletypewriter = { path = "teletypewriter", version = "0.2.31" }
rio-backend = { path = "rio-backend", version = "0.2.31" }
rio-window = { path = "rio-window", version = "0.2.31", default-features = false }
sugarloaf = { path = "sugarloaf", version = "0.2.31" }

# Own dependencies
copa = { path = "copa", default-features = true, version = "0.2.31" }
rio-proc-macros = { path = "rio-proc-macros", version = "0.2.31" }
corcovado = { path = "corcovado", version = "0.2.31" }
raw-window-handle = { version = "0.6.2", features = ["std"] }
parking_lot = { version = "0.12.4", features = [
    "nightly",
    "hardware-lock-elision",
] }
rustc-hash = "2.1.1"
smallvec = "1.15.1"

# unicode-width = "0.2.0"
unicode-width = { package = "unicode-width-16", version = "0.1.0" }
base64 = "0.22.1"
image_rs = { package = "image", version = "0.25.5", default-features = false, features = [
    "gif",
    "jpeg",
    "ico",
    "png",
    "pnm",
    "webp",
    "bmp",
] }
regex = "1.11.1"
bytemuck = { version = "1.23.1", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
wgpu = "25.0.2"
libc = "0.2.174"
smol_str = "0.3.2"
futures = "0.3.31"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.34"
wasm-bindgen-test = "0.3.42"
env_logger = "0.11.8"
console_log = "0.2.2"
bitflags = "2.9.0"
iovec = "0.1.4"
console_error_panic_hook = "0.1.7"
tracing = "0.1.41"
objc = { package = "objc-rs", version = "0.2.8" }
memmap2 = "0.9.5"
url = "2.5.4"
criterion = { version = "0.6.0", features = ["html_reports"] }
dashmap = "6.1.0"

[profile.release]
strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
debug = "full"              # No one needs an undebuggable release binary
codegen-units = 1
incremental = false
lto = true                  # reduces binary size by ~14%
panic = "abort"             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort

[profile.dev]
split-debuginfo = "unpacked"
lto = false
incremental = true
opt-level = 0
