[package]
name = "ansi-machine"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vte = "0.11.0"
teletypewriter = { workspace = true }
crosswords = { path = "../crosswords" }
renderer = { path = "../renderer" }
