[package]
name = "ansi-machine"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vte = "0.11.0"
teletypewriter = { workspace = true }
crosswords = { path = "../crosswords" }
renderer = { path = "../renderer" }
colors = { path = "../colors" }
mio = "0.6.20"
mio-extras = "2"
tokio = { version = "1.26.0", features = ["full"] }
parking_lot = "0.12.0"