[package]
name = "colors"
version = "0.0.1"
edition = { workspace = true }
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.2"
serde = { workspace = true }
wgpu = { workspace = true }
log = { workspace = true }