[package]
authors = ["Raphael Amorim <rapha850@gmail.com>"]
description = "Parser for implementing terminal emulators"
repository = "https://github.com/raphamorim/rio"
documentation = "https://github.com/raphamorim/rio"
readme = "README.md"
license = "Apache-2.0 OR MIT"
version = { workspace = true }
name = "copa"
edition = "2021"

[features]
default = []
no_std = ["arrayvec"]
serde = ["dep:serde"]

[dependencies]
arrayvec = { version = "0.7.2", default-features = false, optional = true }
memchr = "2.7.4"
serde = { version = "1.0.160", features = ["derive"], optional = true }
rio-proc-macros = { workspace = true }
