[package]
name = "corcovado"
version = "0.0.1"
license = "MIT"
authors = ["Raphael Amorim <rapha850@gmail.com"]
description = "Non-blocking IO library"
documentation = "https://raphamorim.io/rio/docs"
homepage = "https://github.com/raphamorim/rio"
repository = "https://github.com/raphamorim/rio"
readme = "README.md"
keywords = ["io", "async", "non-blocking"]
categories = ["asynchronous"]
include = [
  "Cargo.toml",
  "src/**/*.rs"
]

[dependencies]
log = { workspace = true }
iovec = "0.1.1"
slab = "0.4.0"
net2 = "0.2.36"
cfg-if = "0.1.9"

[target.'cfg(target_os = "fuchsia")'.dependencies]
fuchsia-zircon = "0.3.2"
fuchsia-zircon-sys = "0.3.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2.140"

[target.'cfg(windows)'.dependencies]
windows-sys = "0.42.0"
miow = "0.5.0"
windows = { version = "0.42.0", features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Pipes",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
]}

[dev-dependencies]
env_logger = { version = "0.4.0", default-features = false }
tempdir = "0.3.4"
bytes = "0.3.0"
criterion = "0.5.1"

[[test]]
name = "test"
path = "test/mod.rs"

[[bench]]
name = "bench_poll"
path = "benches/bench_poll.rs"
harness = false