[package]
name = "crosswords"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colors = { path = "../colors" }
unicode-width = "0.1.5"
bitflags = "2.0.2"
serde = { workspace = true }