[package]
name = "renderer"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glyph_brush = "0.7.7"
wgpu = { workspace = true }
bytemuck = { workspace = true }
config = { path = "../config" }
crosswords = { path = "../crosswords" }
colors = { path = "../colors" }