[package]
name = "rio-config"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
toml = "0.7.3"
dirs = "5.0"
regex = "1.7.2"
serde = { workspace = true }
sugarloaf = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
