[package]
name = "rio-config"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
description = "Rio terminal config."
documentation = "https://docs.rs/crate/rio-config/latest"

[dependencies]
toml = "0.7.3"
dirs = "5.0"
regex = "1.7.2"
serde = { workspace = true }
sugarloaf = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
