[package]
authors = ["Raphael Amorim <rapha850@gmail.com>"]
description = "Rio proc macros"
repository = { workspace = true }
name = "rio-proc-macros"
license = "MIT"
version = { workspace = true }
edition = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.88"
quote = "1.0.37"
