[package]
name = "rio"
version.workspace = true
authors = ["Raphael Amorim <rapha850@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/raphamorim/rio"
documentation = "https://github.com/raphamorim/rio#readme"
description = "Rio terminal app"

[dependencies]
base64 = "0.21.0"
bitflags = "2.0.2"
futures = "0.3"
bytemuck = { workspace = true }
colors = { path = "../colors" }
config = { path = "../config" }
corcovado = { workspace = true }
clap = { version = "4.2.7", features = ["derive"] }
copypasta = { version = "0.8.1", default-features = false }
dirs = "5.0"
notify = "6.0.0"
glyph_brush = "0.7.7"
image = { version = "0.24.5", default-features = false, features = ["ico"] }
lazycell = "1"
libc = { workspace = true }
log = { workspace = true }
parking_lot = "0.12"
serde = { workspace = true }
sugarloaf = { workspace = true }
teletypewriter = { workspace = true }
tokio = { version = "1.26.0", features = ["full"] }
unicode-width = "0.1.5"
vte = { version = "0.11.1", default-features = false }
wgpu = { workspace = true }
winit = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.2"

[target.'cfg(not(any(target_os="windows", target_os="macos")))'.dependencies]
x11-dl = { version = "2", optional = true }
wayland-client = { version = "0.29.0", features = ["dlopen"], optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_IO",
    "Win32_UI_WindowsAndMessaging",
]}

[features]
default = ["wayland", "x11"]
x11 = [
    "copypasta/x11",
    "winit/x11"
]
wayland = [
    "copypasta/wayland",
    "winit/wayland",
    "winit/wayland-dlopen",
    "wayland-client"
]

[package.metadata.deb]
name = "rio"
maintainer = "Raphael Amorim <rapha850@gmail.com>"
copyright = "2023, Raphael Amorim <rapha850@gmail.com>"
depends = "$auto"
section = "admin"
priority = "optional"
assets = [
    ["../target/release/rio", "usr/local/bin/", "755"],
    ["../misc/rio.desktop", "usr/share/applications/", "644"],
    ["../misc/rio.terminfo", "usr/share/info/", "644"],
    ["../misc/logo.svg", "usr/share/icons/hicolor/scalable/apps/rio.svg", "644"],
    ["../README.md", "usr/share/doc/rio/", "644"],
    ["../LICENSE", "usr/share/doc/rio/", "664"]
]
extended-description = """\
Rio terminal is a hardware-accelerated GPU terminal emulator powered by WebGPU, focusing to run in desktops and browsers.
The supported platforms currently consist of BSD, Linux, macOS and Windows."""

[package.metadata.deb.variants.x11]
name = "rio-x11"

[package.metadata.deb.variants.wayland]
name = "rio-wayland"
